@@ -60,6 +60,8 @@ kotlin {
             implementation(libs.androidx.lifecycle.viewmodel)
             implementation(libs.androidx.lifecycle.runtime.compose)
 
+//            implementation("dev.sargunv.maplibre-compose:maplibre-compose:0.6.0")
+
             implementation(project(":pondui"))
             implementation(project(":model"))
         }
@@ -111,5 +113,13 @@ compose.desktop {
             packageName = "streetlight.app"
             packageVersion = "1.0.0"
         }
+
+//        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+//        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
+//
+//        if (System.getProperty("os.name").contains("Mac")) {
+//            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+//            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+//        }
     }
 }
